--- a/node/package.json
+++ b/node/package.json
@@ -4,7 +4,9 @@
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.1",
         "mysql": "^2.18.1",
         "pdf-lib": "^1.17.1"
     },
