--- a/reactFront/package.json
+++ b/reactFront/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/react": "2.1.7",
     "axios": "1.4.0",
+    "framer-motion": "^10.16.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.2",
@@ -24,6 +26,7 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.3.4",
+    "tailwindcss": "^3.3.3",
     "vite": "4.3.2"
   }
 }
