--- a/reactFront/package.json
+++ b/reactFront/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@nextui-org/react": "2.1.7",
+    "@nextui-org/react": "^2.1.7",
     "axios": "1.4.0",
-    "framer-motion": "^10.16.1",
+    "framer-motion": "^10.16.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.45.2",
